--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -4912,6 +4912,70 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Data for each language\n",
+        "data_fortran = [0.110918, 0.106957, 0.115797, 0.111905, 0.112448, 0.106612, 0.103781, 0.103172, 0.103289, 0.104149]\n",
+        "data_c = [0.067164, 0.065278, 0.064454, 0.065077, 0.061873, 0.063850, 0.064644, 0.057305, 0.053622, 0.050344]\n",
+        "data_cpp = [0.113546, 0.122736, 0.113655, 0.103654, 0.103034, 0.102928, 0.103052, 0.102880, 0.102925, 0.103241]\n",
+        "data_java = [0.192890, 0.165943, 0.177816, 0.123219, 0.115984, 0.089270, 0.104528, 0.098520, 0.094887, 0.092712]\n",
+        "data_js = [0.3060, 0.2790, 0.2960, 0.2670, 0.2670, 0.2900, 0.2710, 0.2830, 0.2740, 0.2690]\n",
+        "\n",
+        "# Create DataFrames\n",
+        "df_fortran = pd.DataFrame({\"Ejecución\": range(1, 11), \"Tiempo (s)\": data_fortran})\n",
+        "df_c = pd.DataFrame({\"Ejecución\": range(1, 11), \"Tiempo (s)\": data_c})\n",
+        "df_cpp = pd.DataFrame({\"Ejecución\": range(1, 11), \"Tiempo (s)\": data_cpp})\n",
+        "df_java = pd.DataFrame({\"Ejecución\": range(1, 11), \"Tiempo (s)\": data_java})\n",
+        "df_js = pd.DataFrame({\"Ejecución\": range(1, 11), \"Tiempo (s)\": data_js})\n",
+        "\n",
+        "# Calculate averages\n",
+        "avg_fortran = df_fortran[\"Tiempo (s)\"].mean()\n",
+        "avg_c = df_c[\"Tiempo (s)\"].mean()\n",
+        "avg_cpp = df_cpp[\"Tiempo (s)\"].mean()\n",
+        "avg_java = df_java[\"Tiempo (s)\"].mean()\n",
+        "avg_js = df_js[\"Tiempo (s)\"].mean()\n",
+        "\n",
+        "# Create a new DataFrame with average times\n",
+        "df_avg_times = pd.DataFrame({\n",
+        "    \"Lenguaje\": [\"Fortran\", \"C\", \"C++\", \"Java\", \"JavaScript\"],\n",
+        "    \"Promedio (s)\": [avg_fortran, avg_c, avg_cpp, avg_java, avg_js]\n",
+        "})\n",
+        "\n",
+        "# Add the Speed Factor column (1 / Promedio)\n",
+        "df_avg_times[\"Speed Factor\"] = 1 / df_avg_times[\"Promedio (s)\"]\n",
+        "\n",
+        "# Sort the DataFrame by the \"Promedio (s)\" column in ascending order\n",
+        "df_avg_times_sorted = df_avg_times.sort_values(by=\"Promedio (s)\", ascending=True)\n",
+        "\n",
+        "# Display the sorted DataFrame with Speed Factor\n",
+        "print(df_avg_times_sorted)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0aFA2fb5mY2-",
+        "outputId": "880b8176-0228-4adb-bd6c-29f32e041838"
+      },
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     Lenguaje  Promedio (s)  Speed Factor\n",
+            "1           C      0.061361     16.296970\n",
+            "2         C++      0.107165      9.331396\n",
+            "0     Fortran      0.107903      9.267600\n",
+            "3        Java      0.125577      7.963248\n",
+            "4  JavaScript      0.280200      3.568879\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**My own example 33 - Sorting the the data frame by average execution time**"
